tests/neg/i10074.scala
class Context
given as as Context = ???  // ok
given as Context = ???     // error // error // error
